<resources>
    <string name="app_name">Agenda De Compromissos</string>
    <string name="action_settings">Settings</string>
    <string name="lb_gravar">Gravar</string>
    <string name="lb_mostrar">Mostrar</string>
    <string name="lb_nome">Digite um nome: </string>
    <string name="title_activity_calendario">Calendario</string>
    <string name="title_activity_cadastrar">Cadastrar</string>
    <string name="title_activity_main">Menu</string>
    <string name="lb_novoCompromisso">NOVO COMPROMISSO</string>
    <string name="title_activity_repetir">Repetir</string>
    <string name="lbl_data">Data:</string>
    <string name="lbl_local">Local:</string>
    <string name="lbl_descricao">Descrição:</string>
    <string name="lbl_participantes">Participantes:</string>
    <string name="lbl_tipo">Tipo:</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_frequencia">Repetir a cada:</string>
    <string name="lbl_inicio">Inicio em:</string>
    <string name="lbl_terminar">Termina:</string>
    <string name="lbl_resumo">Resumo:</string>
    <string name="lbl_concluido">Concluído</string>
    <string name="lbl_cancelar">Cancelar</string>
    <string name="lbl_btTipo">Adicionar novo tipo</string>
    <string name="lbl_adicionar">Adicionar</string>
    <string name="lbl_nome">Nome:</string>
    <string name="lbl_visualizar">Visualizar</string>
    <string name="lbl_alterarcompromisso">Alterar</string>
    <string name="lbl_expurgar">Expurgar</string>
    <string name="title_activity_compromissos">Dados dos Compromissos</string>
    <string name="title_activity_alterar">Alterar</string>
    <string name="title_activity_cancelar">Cancelar</string>
    <string name="title_activity_expurgar">Expurgar</string>
    <string name="title_activity_cadastrar2">Cadastrar2</string>
    <string name="lbl_novoCompromisso">NOVO COMPROMISSO</string>
    <string name="title_activity_tela_list_view">TelaListView</string>
    <string name="title_activity_mostrar_todos">MostrarTodos</string>
    <string name="title_activity_excluir_tipo">ExcluirTipo</string>
</resources>
