<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.renatoaugusto.MenuPrincipal"
    tools:showIn="@layout/activity_menu"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_gravar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_novoCompromisso"
        android:layout_above="@+id/bt_mostrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/bt_mostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_mostrar"
        android:layout_above="@+id/bt_cancelar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_alterarcompromisso"
        android:id="@+id/bt_alterar"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_expurgar"
        android:id="@+id/bt_expurgar"
        android:layout_below="@+id/bt_alterar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cancelar"
        android:id="@+id/bt_cancelar"
        android:layout_above="@+id/bt_alterar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>